--- a/MyMvcApp/Views/Search/Index.cshtml
+++ b/MyMvcApp/Views/Search/Index.cshtml
@@ -19,11 +19,11 @@
                 </div>
                 <br>
                 <div class="post-count"><strong>Votes: </strong>@item.Post.Score</div>
-                <div class="post-answers">Answers: @item.Post.Score</div>
-                <div class="post-owner">Posted By: @item.DisplayName</div>
-                <div class="rep">Poster Reputation: @item.ReputationScore</div>
+                <div class="post-answers"><strong>Answer Count: </strong>@item.Post.Score</div>
+                <div class="post-owner"><strong>Posted by: </strong>@item.DisplayName</div>
+                <div class="rep"><strong>Poster Reputation: </strong>@item.ReputationScore</div>
                 <div class="post-badges">
-                    Badges: 
+                    <strong>Badges: </strong>
                     @if (item.Badges.Any())
                     {
                         @string.Join(", ", item.Badges)
