--- a/MyMvcApp/Views/Search/Index.cshtml
+++ b/MyMvcApp/Views/Search/Index.cshtml
@@ -19,7 +19,7 @@
                 </div>
                 <br>
                 <div class="post-count"><strong>Votes: </strong>@item.Post.Score</div>
-                <div class="post-answers"><strong>Answer Count: </strong>@item.Post.Score</div>
+                <div class="post-answers"><strong>Answer Count: </strong>@item.Post.AnswerCount</div>
                 <div class="post-owner"><strong>Posted by: </strong>@item.DisplayName</div>
                 <div class="rep"><strong>Poster Reputation: </strong>@item.ReputationScore</div>
                 <div class="post-badges">
